# workshops

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.yaml  pyproject.toml
src/example/: __init__.py  get_data.py
src/example/experiments/eda_baseline/: README.md  eda.py
src/example/experiments/moran_spatial_autocorrelation/: auto_correlation.py
workshops/workshop-01-experiment-tracking/: presentation.tex
workshops/workshop-02-gen-ai-workflows-01/: README.md  presentation.tex
